--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,8 @@
-QA.appUrl = https://qa.assistive.site/auth/login
-QA.homeURL = https://qa.assistive.site/settings-assistant
-QA.username = portal@channelplay.in
-QA.password = channelplay726$
+#QA.appUrl = https://qa.assistive.site/auth/login
+#QA.homeURL = https://qa.assistive.site/settings-assistant
+#QA.username = portal@channelplay.in
+#QA.password = channelplay726$
 
 QA.crmPortal = https://qa.assistive.site/
+QA.username = taufik@1channel.ai
+QA.password = test1234
