--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,7 @@
-#QA.appUrl = https://qa.assistive.site/auth/login
-#QA.homeURL = https://qa.assistive.site/settings-assistant
-#QA.username = portal@channelplay.in
-#QA.password = channelplay726$
 
-QA.crmPortal = https://qa.assistive.site/
-QA.username = taufik@1channel.ai
-QA.password = test1234
+QA.appUrl = https://qa.assistive.site/auth/login
+#QA.username = taufik@1channel.ai
+#QA.password = test1234
+
+QA.username = david@boranora.com
+QA.password = niit#123
