--- a/application.properties
+++ b/application.properties
@@ -3,8 +3,8 @@ QA.appUrl = https://qa.assistive.site/auth/login
 #QA.username = taufik@1channel.ai
 #QA.password = test1234
 
-#QA.username = david@boranora.com
-#QA.password = niit#123
+QA.username = david@boranora.com
+QA.password = niit#123
 
-QA.username = pritam@getassistive.com
-QA.password = 12345678
+#QA.username = pritam@getassistive.com
+#QA.password = 12345678
