commit by Soumya 24-02-23
AUT-2, AUT-3, AUT-12, UT-17
commonUtil change: added sleep function
Object change: added Assistive_Login class

--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,17 @@
 
+#Login
 QA.appUrl = https://qa.assistive.site/auth/login
-#QA.username = taufik@1channel.ai
-#QA.password = test1234
+#QA.username = david@boranora.com
+QA.username = soumya@getassistive.com
+QA.password = 12345678
+#QA.homeURL = https://qa.assistive.site/settings-assistant
+#QA.crmPortal = https://qa.assistive.site/
 
-QA.username = david@boranora.com
-QA.password = niit#123
+#Forgot Password
+QA.mail_verify_url = https://www.mailinator.com/v4/public/inboxes.jsp?to=forgot_pass
+QA.forgot_pass_new = 12345678
 
-#QA.username = pritam@getassistive.com
-#QA.password = 12345678
+
+#Admin -> Users -> Add new user
+QA.newUser_firstname = Test1
+QA.newUser_lastname = User1
