--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,6 @@
             <version>2.41.2</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
@@ -123,6 +122,14 @@
             <artifactId>pdfextentreporter</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.26</version>
+                <scope>provided</scope>
+            </dependency>
 
 
     </dependencies>
