--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,11 @@ QA.appUrl = https://qa.assistive.site/auth/login
 #QA.username = david@boranora.com
 #QA.password = niit#123
 
-QA.username = pritam@getassistive.com
-QA.password = 12345678
+#QA.username = pritam@getassistive.com
+#QA.password = 12345678
+
+
+
+QA.crmPortal = https://qa.assistive.site/
+QA.username=cowork@mailinator.com
+QA.password=12345678
