--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,14 @@
             <artifactId>pdfextentreporter</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
 
 
     </dependencies>
