--- a/application.properties
+++ b/application.properties
@@ -5,8 +5,8 @@ QA.appUrl = https://qa.assistive.site/auth/login
 #QA.username = taufik@1channel.ai
 #QA.password = test1234
 
-#QA.username = david@boranora.com
-#QA.password = niit#123
+QA.username = david@boranora.com
+QA.password = niit#123
 
 #QA.username = pritam@getassistive.com
 #QA.password = 12345678
@@ -15,8 +15,8 @@ QA.appUrl = https://qa.assistive.site/auth/login
 #QA.password = 12345678
 
 #QA.username = david@boranora.com
-QA.username = soumya@getassistive.com
-QA.password = 12345678
+#QA.username = soumya@getassistive.com
+#QA.password = 12345678
 #QA.homeURL = https://qa.assistive.site/settings-assistant
 #QA.crmPortal = https://qa.assistive.site/
 
@@ -26,8 +26,8 @@ QA.forgot_pass_new = 12345678
 
 
 #Admin -> Users -> Add new user
-QA.newUser_firstname = Test1
-QA.newUser_lastname = User1
+#QA.newUser_firstname = Test1
+#QA.newUser_lastname = User1
 
 #QA.username = pritam@getassistive.com
 #QA.password = 12345678
