--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,12 @@
 
 #Login
-QA.appUrl = https://qa.assistive.site/auth/login
+QA.appUrl = https://preprod.assistive.site/auth/login
 
-#QA.username = taufik@1channel.ai
-#QA.password = test1234
+QA.username = testcrm12@mailinator.com
+QA.password = 123456789
 
-QA.username = david@boranora.com
-QA.password = niit#123
+#QA.username = david@boranora.com
+#QA.password = niit#123
 
 #QA.username = pritam@getassistive.com
 #QA.password = 12345678
