--- a/application.properties
+++ b/application.properties
@@ -2,33 +2,72 @@
 #Login
 QA.appUrl = https://qa.assistive.site/auth/login
 
-#QA.username = taufik@1channel.ai
-#QA.password = test1234
+#QA.homeURL = https://qa.assistive.site/settings-assistant
+#QA.crmPortal = https://qa.assistive.site/
+
+#Login Credentials
 
 QA.username = david@boranora.com
 QA.password = niit#123
 
+#QA.username = pritam@mailinator.com
+#QA.password = 12345678
+
+
+#QA.username = pritam@mailinator.com
+#QA.password = 12345678
+
+#Taufik
+#QA.username = taufik@1channel.ai
+#QA.password = test1234
+
+#Pritam
 #QA.username = pritam@getassistive.com
 #QA.password = 12345678
 
-#QA.username = pritamatta5524@gmail.com
-#QA.password = 12345678
-
+#Soumya
 #QA.username = david@boranora.com
 #QA.username = soumya@getassistive.com
+#QA.username = demodemo0427@gmail.com
+#QA.username = forgot_pass@mailinator.com
 #QA.password = 12345678
-#QA.homeURL = https://qa.assistive.site/settings-assistant
-#QA.crmPortal = https://qa.assistive.site/
 
-#Forgot Password
-QA.mail_verify_url = https://www.mailinator.com/v4/public/inboxes.jsp?to=forgot_pass
-QA.forgot_pass_new = 12345678
+#Bhawna
+#QA.username =
+#QA.password =
 
 
-#Admin -> Users -> Add new user
+#Forgot Password AUT-3...
+QA.mail_verify_url_forgotPass = https://www.mailinator.com/v4/public/inboxes.jsp
+QA.forgot_pass_new = 87654321
+QA.emailId_forgorPassword = forgot_pass@mailinator.com
+
+
+#Admin -> Users -> Add new user AUT-12...
 #QA.newUser_firstname = Test1
 #QA.newUser_lastname = User1
 
-#QA.username = pritam@getassistive.com
-#QA.password = 12345678
+#Calendar Date Range Daily activity report AUT-25...
+QA.daily_calendar_startDate = 15-03-2023
+QA.daily_calendar_endDate =  16-03-2023
+
+#Calendar Date Range Detailed activity report AUT-26...
+QA.detailed_calendar_startDay = 2
+QA.detailed_calendar_startMonth = 02
+QA.detailed_calendar_startYear = 2023
+QA.detailed_calendar_endDay = 7
+QA.detailed_calendar_endMonth = 03
+QA.detailed_calendar_endYear = 2023
+
+#SignUp AUT-2....
+QA.signUp_newPassword = 12345678
+QA.mail_verify_url_signUp = https://www.mailinator.com/v4/public/inboxes.jsp
+
+PreProd.appUrl = https://preprod.assistive.site/auth/login
+PreProd.username = pritamatta5524@gmail.com
+PreProd.password = 12345678
+
+Prod.appUrl = https://sys.1channel.ai/auth/login
+Prod.username = taufik@1channel.ai
+Prod.password = test@123
 
