--- a/application.properties
+++ b/application.properties
@@ -7,12 +7,12 @@ QA.appUrl = https://preprod.assistive.site/auth/login
 #QA.crmPortal = https://qa.assistive.site/
 
 
-QA.username = testcrm12@mailinator.com
-QA.password = 123456789
+#QA.username = testcrm12@mailinator.com
+#QA.password = 123456789
 
 
-#QA.username = david@boranora.com
-#QA.password = niit#123
+QA.username = david@boranora.com
+QA.password = niit#123
 
 #QA.username = pritam@mailinator.com
 #QA.password = 12345678
