--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 
 #Login
-QA.appUrl = https://preprod.assistive.site/auth/login
+QA.appUrl = https://qa.assistive.site/auth/login
 
 
 #QA.homeURL = https://qa.assistive.site/settings-assistant
