push by taufik - 28 april
push

--- a/application.properties
+++ b/application.properties
@@ -67,11 +67,11 @@ QA.detailed_calendar_endYear = 2023
 QA.signUp_newPassword = 12345678
 QA.mail_verify_url_signUp = https://www.mailinator.com/v4/public/inboxes.jsp
 
-PreProd.appUrl = https://preprod.assistive.site/auth/login
-PreProd.username = pritamatta5524@gmail.com
-PreProd.password = 12345678
-
-Prod.appUrl = https://sys.1channel.ai/auth/login
-Prod.username = taufik@1channel.ai
-Prod.password = test@123
+#PreProd.appUrl = https://preprod.assistive.site/auth/login
+#PreProd.username = pritamatta5524@gmail.com
+#PreProd.password = 12345678
+#
+#Prod.appUrl = https://sys.1channel.ai/auth/login
+#Prod.username = taufik@1channel.ai
+#Prod.password = test@123
 
