--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
+#QA.appUrl = https://qa.assistive.site/auth/login
 
-#Login
-QA.appUrl = https://qa.assistive.site/auth/login
+QA.appUrl = https://sys.1channel.ai/auth/login
+
 
 
 #QA.homeURL = https://qa.assistive.site/settings-assistant
@@ -10,9 +11,15 @@ QA.appUrl = https://qa.assistive.site/auth/login
 #QA.username = testcrm12@mailinator.com
 #QA.password = 123456789
 
+#QA.username = mobileapp@mailinator.com
 
-QA.username = david@boranora.com
-QA.password = niit#123
+#QA.password = 12345678
+
+#QA.username = david@boranora.com
+#QA.password = niit#123
+
+QA.username = assistiveprod@mailinator.com
+QA.password = test@123
 
 #QA.username = pritam@mailinator.com
 #QA.password = 12345678
